src/app.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");

:root {
  --background: #fff;
  --color: rgb(36, 41, 47);
  --border: #8b5cf6;
  --highlight-color-hover: rgba(255, 255, 255, 0.2);
  --background-color-header: rgb(36, 41, 47);
}

.container {
  display: flex;
  justify-content: start;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  background: var(--background);
  color: var(--color);
}

/* começo do header */
header {
  display: flex;
  align-items: center;
  width: 100%;
  background-color: var(--background-color-header);
  padding: 16px;
}

.logo {
  display: flex;
  align-items: center;
  gap: 5px;
  cursor: pointer;
  transition: 0.2s;
}
.logo:hover {
  opacity: 0.8;
}

.logo h2 {
  font-style: normal;
  font-weight: 600;
  color: rgb(255, 255, 255);
  font-size: 21px;
}
/* final do header */

/* Inicio do main */
main {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
  width: 600px;
  height: 100vh;
  padding: 24px;
}

.mainContent {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-top: 24px;
}

.title {
  font-style: normal;
  font-weight: 700;
  font-size: 56px;
  line-height: 125%;
  margin-bottom: 15px;
}

.subTitle {
  font-style: normal;
  font-weight: 600;
  font-size: 19px;
  color: var(--color);
  opacity: 0.8;
}

.containerInput {
  padding: 15px;
  margin: 42px 0;
  display: flex;
  border-radius: 8px;
  background-color: rgb(246, 248, 250);
  box-shadow: rgb(27 31 36 / 4%) 0px 1px 0px,
    rgb(255 255 255 / 25%) 0px 1px 0px inset;
  transition: 1s ease-in;
  border: 1px solid rgb(208, 215, 222);
}

.containerInput:hover {
  border-radius: 12px;
}

.containerInput input {
  background-color: transparent;
  border: 0;
  font-size: 20px;
  color: #24292f;
  outline: none;
  margin-right: 8px;
}

.containerInput input::placeholder {
  color: #24292f;
  opacity: 0.8;
}

.buttonSearch {
  background-color: transparent;
  border: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: transform 0.5s;
}

.buttonSearch:hover {
  transform: scale(1.2);
}

/* Inicio da resposta com o CEP gerado */
.answer {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-direction: column;
  border: 1px solid rgb(208, 215, 222);
  padding: 24px;
  border-radius: 8px;
  gap: 10px;
}

.answer h2 {
  display: flex;
  align-items: center;
  gap: 5px;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
}

.cepAddress {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 12px 0;
}

.cepAddress span {
  font-style: normal;
  font-weight: 500;
  font-size: 26px;
}

.copy {
  display: flex;
  align-items: center;
}

.copyIcon {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 2px 6px;
  cursor: pointer;
  background-color: rgb(221, 244, 255);
  color: #0969da;
  border-radius: 6px;
  transition: 1s;
}

.copyIcon:hover {
  border-radius: 8px;
  text-decoration: underline;
}

.copy span {
  font-size: 18px;
}

.address h3 {
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  border-bottom: 1px solid rgb(208, 215, 222);
  padding: 10px 0;
  width: 100%;
}

.address h4 {
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  padding: 10px 0;
  width: 100%;
}

.address span {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
}

.address {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-direction: column;
  gap: 10px;
}

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  bottom: 0;
  width: 600px;
  padding: 25px;
  gap: 25px;
  font-size: 14px;
  border-top: 1px solid rgb(208, 215, 222);
}

footer .footerLogo {
  display: flex;
  align-items: center;
  gap: 5px;
}

footer .footerLogo span {
  /* font-family: "Inter"; */
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  color: #6e7781;
  line-height: 1.5;
}

footer a {
  color: rgb(9, 105, 218);
  text-decoration: none;
}

footer a:hover {
  text-decoration: underline;
}

/* responsividade */
@media (max-width: 500px) {
  main {
    width: 380px;
  }
  /* container */

  .title {
    font-size: 42px;
  }
  .subTitle {
    font-size: 14px;
  }
  .containerInput {
    width: 300px;
  }
  .containerInput input {
    width: 300px;
  }
  .buttonSearch {
    position: absolute;
    right: 125px;
  }

  /* main */
  /* .main{
    width: 380px;
    margin-bottom: 200px;
  }
  .main h2{
    font-size: 32px;
  }
  .main span{
    font-size: 14px;
  } */

  /* footer */
  footer {
    display: flex;
    width: 380px;
  }
  footer a {
    margin-bottom: 30px;
  }
  footer .footerLogo {
    position: absolute;
    bottom: 10px;
  }
}

@media (max-width: 480px) {
  .buttonSearch {
    position: absolute;
    right: 100px;
  }
  .answer h2 {
    font-size: 24px;
  }
  .cepAddress span {
    font-size: 18px;
  }
}

@media (max-width: 450px) {
  .buttonSearch {
    position: absolute;
    right: 85px;
  }
}

@media (max-width: 430px) {
  .buttonSearch {
    position: absolute;
    right: 85px;
  }
}

